--- a/apps/adopcion/templates/historial_adopciones.html
+++ b/apps/adopcion/templates/historial_adopciones.html
@@ -30,6 +30,7 @@
                             <td>
                                 <a class="btn btn-primary" href="{% url 'adopcion:adopcion_eliminar' i.id %}">Eliminar</a>
                                 <a class="btn btn-primary" href="{% url 'adopcion:adopcion_editar' i.id %}">Editar</a>
+                                <a class="btn btn-primary" href="{% url 'adopcion:adopcion_renovar' i.id %}">Renovar</a>
                             </td>
 
                         </tr>
