--- a/apps/encontrados/templates/index_encontrados.html
+++ b/apps/encontrados/templates/index_encontrados.html
@@ -5,12 +5,17 @@
 {% block content %}
 <br>
 <br>
-<div class="container-fluid" data-aos="fade-up">
-   <div class="section-title" style= "color: #fff; background-color: #1b1b1b;">
-      <h5 style="text-align: center; font: 900 32px bold; padding: 1.5em  ; margin: 0">Consulta Encontrados</h5>
-      <p style="text-align: center;" >Estas mascotas se encuentran sin Dueño, si las conoces, por favor avisá al dueño.</p>
+<div class="container-fluid" data-aos="fade-up " style="padding: 1.5em;">
+   <div class="row" >
+		<div class="col-md-12" style= "color: #fff; background-color: #1b1b1b; padding: 1.5em;">
+			<h2 class="text-center" >
+				Consulta encontrados
+			</h2>
+			<h6 class="text-center">
+				Estas mascotas se encuentran sin dueño, si las conoces, por favor avisá al dueño.
+			</h6>
+		</div>
    </div>
-</div>
 <section style="padding: 1em 2em; background-color:#faeded;">
    <div class="row">
       <div class="col-md-2">
@@ -24,12 +29,13 @@
                </div>
                
                <div class="form-group" style="padding: 1em 1em 0 1em;">
+                  {{search_form.especie.label}} {{search_form.especie}}
+               </div>
+
+               <div class="form-group" style="padding: 1em 1em 0 1em;">
                   {{search_form.barrio.label}} {{search_form.barrio}}
                </div>
                
-               <div class="form-group" style="padding: 1em 1em 0 1em;">
-                  {{search_form.especie.label}} {{search_form.especie}}
-               </div>
                <div class="form-group" style="padding: 1em 1em 0 1em;">
                   {{search_form.localidad.label}} {{search_form.localidad}}
                </div>
@@ -47,7 +53,7 @@
          <div style="display: flex; flex-direction: row; flex-wrap: wrap; gap: 1em; text-align: center; align-items: center; justify-content: center;">
             {% for publicacion in publicaciones %}
                   
-            <div class="box" style="flex-basis: 15em; height: 25em;">
+            <div class="box" style="flex-basis: 15em; height: 100%; background-color: #fff;">
             
                <div class="container border" style="padding: 1em; height: 100%;">
                   
@@ -57,7 +63,7 @@
                         
                         <div class="box-part text-center" style="display: flex;flex-direction: column; align-items: center; justify-content: center; height: 80%;">
                            <div style="display: flex; position: relative;">
-                              <img src="{{ publicacion.id_mascota.fotos.url }}" alt="" style="object-fit: contain; width: 100%; height: 18em;">
+                              <img src="{{ publicacion.id_mascota.fotos.url }}" alt="" style="object-fit: contain; width: 100%; height: 100%;">
                            </div>    
                            <div class="title">
                               <h4 style="font-size: 14px;">{{ publicacion.id_mascota.nombre }}</h4>
