--- a/apps/perdidos/templates/index_perdidos.html
+++ b/apps/perdidos/templates/index_perdidos.html
@@ -5,10 +5,16 @@
 {% block content %}
 <br>
 <br>
-<div class="container-fluid" data-aos="fade-up">
-   <div class="section-title" style= "color: #fff; background-color: #1b1b1b;">
-      <h5 style="text-align: center; font: 900 32px bold; padding: 1.5em  ; margin: 0">Consulta Perdidos</h5>
-      <p style="text-align: center;" >Estas mascotas se encuentran perdidas, si las viste, por favor contactá al dueño.</p>
+<div class="container-fluid" data-aos="fade-up " style="padding: 1.5em;">
+   <div class="row" >
+		<div class="col-md-12" style= "color: #fff; background-color: #1b1b1b; padding: 1.5em;">
+			<h2 class="text-center" >
+				Consulta perdidos
+			</h2>
+			<h6 class="text-center">
+				Estas mascotas se encuentran perdidas, si las viste, por favor contactá al dueño.
+			</h6>
+		</div>
    </div>
 </div>
 <section style="padding: 1em 2em; background-color:#faeded;">
@@ -24,12 +30,13 @@
                </div>
                
                <div class="form-group" style="padding: 1em 1em 0 1em;">
+                  {{search_form.especie.label}} {{search_form.especie}}
+               </div>
+
+               <div class="form-group" style="padding: 1em 1em 0 1em;">
                   {{search_form.barrio.label}} {{search_form.barrio}}
                </div>
                
-               <div class="form-group" style="padding: 1em 1em 0 1em;">
-                  {{search_form.especie.label}} {{search_form.especie}}
-               </div>
                <div class="form-group" style="padding: 1em 1em 0 1em;">
                   {{search_form.localidad.label}} {{search_form.localidad}}
                </div>
@@ -47,7 +54,7 @@
          <div style="display: flex; flex-direction: row; flex-wrap: wrap; gap: 1em; text-align: center; align-items: center; justify-content: center;">
             {% for publicacion in publicaciones %}
                   
-            <div class="box" style="flex-basis: 15em; height: 25em;">
+            <div class="box" style="flex-basis: 15em; height: 25em; background-color: #fff;">
             
                <div class="container border" style="padding: 1em; height: 100%;">
                   
