--- a/miembros/templates/mi_perfil/password_change_form.html
+++ b/miembros/templates/mi_perfil/password_change_form.html
@@ -1,13 +1,18 @@
 {% extends "base.html" %}
 {% block content %}
-<div class='row'>
-    <div class='col-md-6 col-10  mx-auto'>
-    <h1>Change your Password</h1>
-        <form method='post' action=''>{% csrf_token %}
+<div class="main w-100" style="padding-top:40px;background-color:#faeded" >
+  <div class="container w-100 p-5" >
+    <h1>Cambiar contraseña</h1>
+    <div class="align-self-center text-center" style="margin-left: auto;margin-right: auto; width:70%; background-color: #fff; border-radius: 20px; box-shadow: 0 0 5px;">
+        <form method='post' action=''>
+          {% csrf_token %}
+          <br>
            {{ form.as_p }}
         <span style='margin-bottom: 12px;'></span>
-        <button type="submit" class='btn btn-block btn-info'>Save</button>
+        <button type="submit" class="btn get-started-btn">Guardar</button>
         </form>
+        <br>
       </div>
+  </div>
 </div>
 {% endblock %}
