--- a/apps/encontrados/templates/publicacion_e.html
+++ b/apps/encontrados/templates/publicacion_e.html
@@ -5,6 +5,13 @@
 {% block title %}{% endblock %}
 
 {% block content %}
+<style>
+   @media (max-width: 574px) {
+      .responsive-publicacion {
+         display: block !important;
+      }
+   }
+</style>
 <br>
 <br>
 <br>
@@ -23,35 +30,60 @@
 
    {# <!-- Tarjeta de publicación --> #}
    <article style="width: 60%; padding: 35px 30px; background-color: #fff; border-radius: 20px; box-shadow: 0 0 5px;">
-      <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
-         <span style="padding-bottom: 1em;">Localidad: {{ publicacion.id_ubicacion.localidad }}</span>
-         <span style="padding-bottom: 1em;">Barrio: {{ publicacion.id_ubicacion.barrio }}</span>
-         <span style="padding-bottom: 1em;">Publicado el {{ publicacion.fecha_evento }}</span>
+      <!-- <div style="display: flex; flex-wrap: wrap; justify-content: space-between;"> -->
+      <span style="display: block; padding-bottom: 1.5em; text-align: end;">Publicado el {{ publicacion.fecha_evento }}</span>
+      <div class="responsive-publicacion" style="display: flex; justify-content: center; padding-bottom: 1.5em;">
+         <span class="responsive-publicacion" style="text-align: center;">{{ publicacion.id_ubicacion.localidad }}</span>
+         <span class="responsive-publicacion" style="text-align: center;">&nbsp;-&nbsp;</span>
+         <span class="responsive-publicacion" style="text-align: center;">Barrio {{ publicacion.id_ubicacion.barrio }}</span>
       </div>
-      <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
-         <span style="padding-bottom: 1em;">Calle: {{ publicacion.id_ubicacion.calle }}</span>
-         <span style="padding-bottom: 1em;">N&uacute;mero: {{ publicacion.id_ubicacion.numero }}</span>
-         <span style="padding-bottom: 1em;">Entre calles: {{ publicacion.id_ubicacion.barrio }}</span>
+      <div class="responsive-publicacion" style="display: flex; justify-content: space-between;">
+         <div class="responsive-publicacion" style="display: flex; flex-direction: column;">
+            <span class="responsive-publicacion" style="padding-bottom: 1em;">Calle: {{ publicacion.id_ubicacion.calle }}</span>
+            <span class="responsive-publicacion" style="padding-bottom: 1em;">Especie: {{ publicacion.id_mascota.especie }}</span>
+         </div>
+         <!-- <div style="display: flex; flex-wrap: wrap; justify-content: space-between;"> -->
+         <div class="responsive-publicacion" style="display: flex; flex-direction: column;">
+            <span class="responsive-publicacion" style="padding-bottom: 1em;">N&uacute;mero: {{ publicacion.id_ubicacion.numero }}</span>
+         </div>
+            <!-- <div style="display: flex; flex-wrap: wrap; justify-content: space-between;"> -->
+         <div class="responsive-publicacion" style="display: flex; flex-direction: column;">
+            <span class="responsive-publicacion" style="padding-bottom: 1em;">Entre calles: {{ publicacion.id_ubicacion.entre_calles }}</span>
+            <span class="responsive-publicacion" style="padding-bottom: 1em;">Raza: {{ publicacion.id_mascota.raza }}</span>
+         </div>
       </div>
-      <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
-         <span style="padding-bottom: 1em;">Especie: {{ publicacion.id_mascota.especie }}</span>
-         <span style="padding-bottom: 1em;">Raza: {{ publicacion.id_mascota.raza }}</span>
-      </div>
+      
       <img src="{{ publicacion.id_mascota.fotos.url }}" alt="{{ publicacion.id_mascota.especie }}" style="width: 100%; padding-bottom: 1em;">
-      <p style="text-align: center; font-size: 20px;">Caracter&iacute;sticas</p>
-      <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
-         <span style="padding-bottom: 1em;">Sexo: {{ publicacion.id_mascota.especie }}</span>
-         <span style="padding-bottom: 1em;">Tamaño: {{ publicacion.id_mascota.raza }}</span>
-      </div>
-      <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
-         <span style="padding-bottom: 1em;">Color: {{ publicacion.id_mascota.color }}</span>
-         <span style="padding-bottom: 1em;">Edad: {{ publicacion.id_mascota.edad }}</span>
+
+      <h6 style="padding-top: 1em; text-align: center; font-size: 20px;">Caracter&iacute;sticas</h6>
+      <hr>
+      <div class="responsive-publicacion" style="display: flex; justify-content: space-between;">
+         <div class="responsive-publicacion" style="display: flex; flex-direction: column; flex-wrap: wrap; justify-content: space-between;">
+            <span class="responsive-publicacion" style="padding-bottom: 1em;">Sexo: {{ publicacion.id_mascota.sexo }}</span>
+            <span class="responsive-publicacion" style="padding-bottom: 1em;">Color: {{ publicacion.id_mascota.color }}</span>
+         </div>
+         <div class="responsive-publicacion" style="display: flex; flex-direction: column; flex-wrap: wrap; justify-content: space-between;">
+            <span class="responsive-publicacion"  style="padding-bottom: 1em;">Tamaño: {{ publicacion.id_mascota.tamaño }}</span>
+            <span class="responsive-publicacion" style="padding-bottom: 1em;">Edad: {{ publicacion.id_mascota.edad }}</span>
+         </div>
       </div>
       <p style="padding-bottom: 0.5em;">{{ publicacion.id_mascota.otro_dato }}</p>
-      <p style="text-align: center; font-size: 20px;">Observaciones</p>
+
+      <h6 style="padding-top: 1em; text-align: center; font-size: 20px;">Observaciones</h6>
+      <hr>
       <p style="padding-bottom: 0.5em;">{{ publicacion.observaciones }}</p>
-      <p style="text-align: center; font-size: 20px;">Referencias</p>
+
+      <h6 style="padding-top: 1em; text-align: center; font-size: 20px;">Referencias</h6>
+      <hr>
       <p style="padding-bottom: 0.5em;">{{ publicacion.id_ubicacion.otros_datos }}</p>
+
+      <h6 style="padding-top: 1em; text-align: center; font-size: 20px;">Contacto</h6>
+      <hr>
+      <div style="display: flex; flex-wrap: wrap; justify-content: space-between;">
+         <span style="padding-bottom: 1em;">Nombre: {{ publicacion.id_usuario.first_name }} {{ publicacion.id_usuario.last_name }}</span>
+         <span style="padding-bottom: 1em;">Email: {{ publicacion.id_usuario.email }}</span>
+      </div>
+
    </article>
 
    {# <!-- Iconos editar, borrar, renovar --> #}
