--- a/main/templates/home.html
+++ b/main/templates/home.html
@@ -38,16 +38,16 @@
           <div class="col-lg-3 col-md-6">
             <div class="count-box">
               <i class="bi bi-emoji-smile"></i>
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Mascotas Felices</p>
+              <span data-purecounter-start="0" data-purecounter-end="2032" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Usuarios Felices</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-md-0">
             <div class="count-box">
               <i class="bi bi-journal-richtext"></i>
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Usuarios Felices</p>
+              <span data-purecounter-start="0" data-purecounter-end="21" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Mascotas perdidas</p>
             </div>
           </div>
 
@@ -55,15 +55,15 @@
             <div class="count-box">
               <i class="bi bi-headset"></i>
               <span data-purecounter-start="0" data-purecounter-end="1463" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Horas de Soporte</p>
+              <p>Adopciones publicadas</p>
             </div>
           </div>
 
           <div class="col-lg-3 col-md-6 mt-5 mt-lg-0">
             <div class="count-box">
               <i class="bi bi-people"></i>
-              <span data-purecounter-start="0" data-purecounter-end="1500" data-purecounter-duration="1" class="purecounter"></span>
-              <p>Horas Trababjadas</p>
+              <span data-purecounter-start="0" data-purecounter-end="1240" data-purecounter-duration="1" class="purecounter"></span>
+              <p>Mascotas Encontradas</p>
             </div>
           </div>
 
